fix(gui): adjust window shadow and titlebar z-index, fixed border radius to fit windows style

--- a/src-gui/src/styles/theme.css
+++ b/src-gui/src/styles/theme.css
@@ -291,7 +291,7 @@
   }
 
   body {
-    border-radius: 12px;
+    border-radius: 10px;
   }
 
   h1 {
